# ChangeLog for dev-vcs/bzr-rewrite
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-vcs/bzr-rewrite/ChangeLog,v 1.3 2010/07/27 21:04:56 fauli Exp $

  27 Jul 2010; Christian Faulhammer <fauli@gentoo.org>
  bzr-rewrite-0.6.0.ebuild:
  fix bug 329465 by restricting Python ABIs to 2.*, Bazaar itself has no
  Python 3 support

*bzr-rewrite-0.6.0 (30 Mar 2010)

  30 Mar 2010; Christian Faulhammer <fauli@gentoo.org>
  +bzr-rewrite-0.6.0.ebuild:
  version bump

*bzr-rewrite-0.5.5 (09 Mar 2010)

  09 Mar 2010; Christian Faulhammer <fauli@gentoo.org>
  +bzr-rewrite-0.5.5.ebuild, +metadata.xml:
  initial commit, ebuild taken from Bazaar overlay by Mark Lee and myself
