@@ -1,6 +1,10 @@
 # ChangeLog for dev-vcs/bzr-rewrite
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-vcs/bzr-rewrite/ChangeLog,v 1.3 2010/07/27 21:04:56 fauli Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-vcs/bzr-rewrite/ChangeLog,v 1.4 2010/07/27 21:06:52 fauli Exp $
+
+  27 Jul 2010; Christian Faulhammer <fauli@gentoo.org>
+  -bzr-rewrite-0.5.5.ebuild:
+  clean up
 
   27 Jul 2010; Christian Faulhammer <fauli@gentoo.org>
   bzr-rewrite-0.6.0.ebuild:
